--- a/SolarCRM/Views/ContactUs/Index.cshtml
+++ b/SolarCRM/Views/ContactUs/Index.cshtml
@@ -1,6 +1,166 @@
-﻿
+﻿@model SolarCRM.Models.ContactUs
+
 @{
     ViewData["Title"] = "Index";
 }
+<div class="card-group">
 
-<h1>Index</h1>
+    <div class="contact100-more flex-col-c-m card" style="background-image: url('images/bg-01.jpg');">
+        
+        
+
+    </div>
+
+    <div class="card">
+        <div class="card-body">
+            <form asp-antiforgery="true" asp-controller="ContactUs" asp-action="CreateContactUsRequest">
+
+
+                <div class="form-group">
+
+                    <div class="row">
+                        <div class="col-xl-12 col-sm-12">
+
+                            <h5 class="section-title"><span>Contact Us</span></h5>
+
+                            <div class="row">
+                                <div class="col-md-6">
+
+                                    <label for="FirstName">First Name</label>
+                                    <input class="form-control" asp-for="FirstName" />
+                                </div>
+                                <div class="col-md-6">
+                                    <label for="LastName">Last Name</label>
+                                    <input class="form-control" asp-for="LastName" />
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-md-6">
+
+                                    <label for="Email">Email</label>
+                                    <input class="form-control" asp-for="Email" />
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <label for="PhoneNumber">Phone Number</label>
+                                    <input class="form-control" asp-for="PhoneNumber" />
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-md-12  pdf-col-12">
+                                    <label for="Message">Message</label>
+                                    <textarea class="form-control" asp-for="Message"> </textarea>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+
+<div class="container-contact100">
+		<div class="wrap-contact100">
+			<form class="contact100-form validate-form">
+				<span class="contact100-form-title">
+					Send Us A Message
+				</span>
+
+				<label class="label-input100" for="first-name">Tell us your name *</label>
+				<div class="wrap-input100 rs1-wrap-input100 validate-input" data-validate="Type first name">
+					<input id="first-name" class="input100" type="text" name="first-name" placeholder="First name">
+					<span class="focus-input100"></span>
+				</div>
+				<div class="wrap-input100 rs2-wrap-input100 validate-input" data-validate="Type last name">
+					<input class="input100" type="text" name="last-name" placeholder="Last name">
+					<span class="focus-input100"></span>
+				</div>
+
+				<label class="label-input100" for="email">Enter your email *</label>
+				<div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
+					<input id="email" class="input100" type="text" name="email" placeholder="Eg. example@email.com">
+					<span class="focus-input100"></span>
+				</div>
+
+				<label class="label-input100" for="phone">Enter phone number</label>
+				<div class="wrap-input100">
+					<input id="phone" class="input100" type="text" name="phone" placeholder="Eg. +1 800 000000">
+					<span class="focus-input100"></span>
+				</div>
+
+				<label class="label-input100" for="message">Message *</label>
+				<div class="wrap-input100 validate-input" data-validate="Message is required">
+					<textarea id="message" class="input100" name="message" placeholder="Write us a message"></textarea>
+					<span class="focus-input100"></span>
+				</div>
+
+				<div class="container-contact100-form-btn">
+					<button class="contact100-form-btn">
+						Send Message
+					</button>
+				</div>
+			</form>
+
+			<div class="contact100-more flex-col-c-m" style="background-image: url('images/bg-01.jpg');">
+				<div class="flex-w size1 p-b-47">
+					<div class="txt1 p-r-25">
+						<span class="lnr lnr-map-marker"></span>
+					</div>
+
+					<div class="flex-col size2">
+						<span class="txt1 p-b-20">
+							Address
+						</span>
+
+						<span class="txt2">
+							Mada Center 8th floor, 379 Hudson St, New York, NY 10018 US
+						</span>
+					</div>
+				</div>
+
+				<div class="dis-flex size1 p-b-47">
+					<div class="txt1 p-r-25">
+						<span class="lnr lnr-phone-handset"></span>
+					</div>
+
+					<div class="flex-col size2">
+						<span class="txt1 p-b-20">
+							Lets Talk
+						</span>
+
+						<span class="txt3">
+							+1 800 1236879
+						</span>
+					</div>
+				</div>
+
+				<div class="dis-flex size1 p-b-47">
+					<div class="txt1 p-r-25">
+						<span class="lnr lnr-envelope"></span>
+					</div>
+
+					<div class="flex-col size2">
+						<span class="txt1 p-b-20">
+							General Support
+						</span>
+
+						<span class="txt3">
+							contact@example.com
+						</span>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
