Added scoped service for controlelr for the IContactUs service.

--- a/SolarCRM/Views/ContactUs/Index.cshtml
+++ b/SolarCRM/Views/ContactUs/Index.cshtml
@@ -3,11 +3,57 @@
 @{
     ViewData["Title"] = "Index";
 }
+
+
 <div class="card-group">
 
-    <div class="contact100-more flex-col-c-m card" style="background-image: url('images/bg-01.jpg');">
-        
-        
+    <div class="card" style="background-image: url('images/bg-01.jpg'); background-size:cover;">
+
+
+        <div class="card-body" style="background-color:rgba(0,0,0,0.5)">
+
+            <div class="row">
+                <div class="row">
+                    <div class="col-md-12">
+                        <p style="color:white"><i class="material-icons" style="color:white">location_on</i> Address </p>
+                        <div class="text-center" style="color:white">
+                            <p style="color:white">
+                                977 Boundary Road,
+                                <br> Coopers Plains - 4108,
+                                <br> Queensland
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+
+
+            <div class="row">
+                <div class="col-md-12">
+                    <p style="color:white"><i class="material-icons" style="color:white">call</i> Lets Talk</p>
+                    <div class="text-center" style="color:white">
+                        <p style="color:white">
+                            +61 468 942 ***
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-12">
+                    <p style="color:white"><i class="material-icons" style="color:white">email</i> Email us</p>
+                    <div class="text-center" style="color:white">
+                        <p style="color:white">
+                            Devarsh14@gmail.com
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
 
     </div>
 
